k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hris-fe
  namespace: hrisapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hris-fe
  template:
    metadata:
      labels:
        app: hris-fe
    spec:
      containers:
      - name: hris-fe
        image: penicili/hris-anu-fe:3f92489
        ports:
          - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name:  hris-fe
  namespace: hrisapp
spec:
  selector:
    app:  hris-fe
  type: ClusterIP
  ports:
  - port:  80
    targetPort:  3000
