k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlink-ingress
  namespace: hrisapp
spec:
  ingressClassName: nginx
  rules:
  - host: "hris.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hris-fe
            port:
              number: 80
